--- a/index.html
+++ b/index.html
@@ -9,6 +9,139 @@
     <title>BAGeL Radio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="css/zrqStyle.css" rel="stylesheet">
+</head>
+
+<body>
+
+    <form id="formSelectionScreen" class="row g-3">
+        <img class="bagel-img" src="img/bagel.jpg" alt="">
+
+        <h3>Upload your CSV file</h3>
+        <div class="col-md-12">
+            <!-- <label for="exampleInputEmail1" class="form-label">Email address</label> -->
+            <input type="file" name="files" class="form-control" id="myFile">
+            <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+        </div>
+
+        <!-- <div class="col-12">
+                    <button class="btn btn-primary load-file">Upload CSV file</button> <button
+                        class="btn btn-secondary ">Clear</button>
+                </div> -->
+
+
+    </form>
+
+    <form id="formReport" class="row g-3" style="display: none;">
+        <!-- <img class="bagel-img" src="img/bagel.jpg" alt=""> -->
+
+        <h3>Which reports you want to see ?</h3>
+        <div class="col-md-2">
+            <label for="inputFrom" class="form-label">From</label>
+            <input type="date" class="form-control" id="inputFrom">
+        </div>
+        <div class="col-md-2">
+            <label for="inputTo" class="form-label">To</label>
+            <input type="date" class="form-control" id="inputTo">
+        </div>
+        <div class="col-md-2">
+            <label for="inputNumberOfItems" class="form-label">Number of items to show</label>
+            <input type="number" class="form-control" id="inputAddress" value="30">
+        </div>
+        <div class="col-md-6">
+
+        </div>
+        <div class="col-md-2">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" checked id="gridCheck">
+                <label class="form-check-label" for="gridCheck">
+                    Top Albums BY SPINS
+                </label>
+            </div>
+        </div>
+
+        <div class="col-md-2">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" checked id="gridCheck">
+                <label class="form-check-label" for="gridCheck">
+                    Top Artists BY SPINS
+                </label>
+            </div>
+        </div>
+
+        <div class="col-md-2">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" checked id="gridCheck">
+                <label class="form-check-label" for="gridCheck">
+                    Top Tracks BY SPINS
+                </label>
+            </div>
+        </div>
+
+        <div class="col-md-6">
+
+        </div>
+        <div class="col-md-2">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" checked id="gridCheck">
+                <label class="form-check-label" for="gridCheck">
+                    Top Albums BY LISTENERS
+                </label>
+            </div>
+        </div>
+
+
+        <div class="col-md-2">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" checked id="gridCheck">
+                <label class="form-check-label" for="gridCheck">
+                    Top Artists BY LISTENERS
+                </label>
+            </div>
+        </div>
+
+
+
+        <div class="col-md-2">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" checked id="gridCheck">
+                <label class="form-check-label" for="gridCheck">
+                    Top Tracks BY LISTENERS
+                </label>
+            </div>
+        </div>
+        <div class="col-md-6">
+
+        </div>
+        <div class="col-12">
+            <button class="btn btn-primary showReport">Show me the stuff</button>
+            <button class="btn btn-secondary loadAnother">Load another CSV file</button>
+        </div>
+    </form>
+    <hr>
+    <form id="searchForm" class="row g-3" style="display: none;">
+        <h4>You can filter by...</h4>
+        <div class="col-md-3">
+            <input id="zrq-search-artist" name="zrq-search-artist" type="text" placeholder="Type artist name here..."
+                class="form-control" />
+        </div>
+        <div class="col-md-3">
+            <input id="zrq-search-song" name="zrq-search-song" type="text" placeholder="Type song name here..."
+                class="form-control" />
+        </div>
+        <div class="col-md-3">
+            <input id="zrq-search-album" name="zrq-search-album" type="text" placeholder="Type album name here..."
+                class="form-control" />
+        </div>
+
+        <div class="col-md-3">
+            <button class="btn btn-secondary" id="btnClearFilter" >Clear filter</button>
+        </div>
+
+    </form>
+
+    <div id="myTable"></div>
+
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -17,128 +150,6 @@
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
-    <style>
-        body {
-            background-color: transparent;
-        }
-
-        html {
-            padding: 5rem;
-
-        }
-
-        .bagel-img {
-            width: 50%;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="row">
-        <div class="col">
-            <form class="row g-3 visible">
-                <img class="bagel-img" src="img/bagel.jpg" alt="">
-
-                <h3>Upload your file</h3>
-                <div class="col-md-12">
-                    <!-- <label for="exampleInputEmail1" class="form-label">Email address</label> -->
-                    <input type="file" name="files" class="form-control" id="myFile">
-                    <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
-                </div>
-
-                <div class="col-12">
-                    <button class="btn btn-primary load-file">Upload CSV file</button> <button
-                        class="btn btn-secondary ">Clear</button>
-                </div>
-
-
-            </form>
-        </div>
-        <div class="col">
-            <form id="formReport" class="row g-3 invisible">
-                <h3>What Reports do you want ?</h3>
-                <div class="col-md-3">
-                    <label for="inputFrom" class="form-label">From</label>
-                    <input type="date" class="form-control" id="inputFrom">
-                </div>
-                <div class="col-md-3">
-                    <label for="inputTo" class="form-label">To</label>
-                    <input type="date" class="form-control" id="inputTo">
-                </div>
-                <div class="col-md-6">
-                    <label for="inputNumberOfItems" class="form-label">Number of items to show</label>
-                    <input type="number" class="form-control" id="inputAddress" value="30">
-                </div>
-
-                <div class="col-md-12">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" checked id="gridCheck">
-                        <label class="form-check-label" for="gridCheck">
-                            Top Albums BY SPINS
-                        </label>
-                    </div>
-                </div>
-
-                <div class="col-md-12">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" checked id="gridCheck">
-                        <label class="form-check-label" for="gridCheck">
-                            Top Albums BY LISTENERS
-                        </label>
-                    </div>
-                </div>
-
-                <div class="col-md-12">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" checked id="gridCheck">
-                        <label class="form-check-label" for="gridCheck">
-                            Top Artists BY SPINS
-                        </label>
-                    </div>
-                </div>
-
-                <div class="col-md-12">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" checked id="gridCheck">
-                        <label class="form-check-label" for="gridCheck">
-                            Top Artists BY LISTENERS
-                        </label>
-                    </div>
-                </div>
-
-                <div class="col-md-12">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" checked id="gridCheck">
-                        <label class="form-check-label" for="gridCheck">
-                            Top Tracks BY SPINS
-                        </label>
-                    </div>
-                </div>
-
-                <div class="col-md-12">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" checked id="gridCheck">
-                        <label class="form-check-label" for="gridCheck">
-                            Top Tracks BY LISTENERS
-                        </label>
-                    </div>
-                </div>
-
-                <div class="col-12">
-                    <button class="btn btn-primary showReport">Show me the stuff</button>
-                </div>
-            </form>
-        </div>
-    </div>
-
-
-
-    <hr>
-
-
-    <div id="myTable"></div>
-
-
 </body>
 
 </html>
