--- a/index.html
+++ b/index.html
@@ -135,13 +135,30 @@
         </div>
 
         <div class="col-md-3">
-            <button class="btn btn-secondary" id="btnClearFilter" >Clear filter</button>
+            <button class="btn btn-secondary" id="btnClearFilter">Clear filter</button>
         </div>
 
     </form>
 
     <div id="myTable"></div>
 
+    <div id="zrqError" class="modal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">ERROR</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p id="errorText"></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" onclick="onCloseModalClick()"
+                        data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
