--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <form id="formReport" class="row g-3" style="display: none;">
         <!-- <img class="bagel-img" src="img/bagel.jpg" alt=""> -->
 
-        <h3>Which reports you want to see ?</h3>
+        <h3>Which reports do you want to see ?</h3>
         <div class="col-md-2">
             <label for="inputFrom" class="form-label">From</label>
             <input type="date" class="form-control" id="inputFrom">
