--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         crossorigin="anonymous"></script>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.js"></script>
+    <script type="text/javascript" src="js/loadingoverlay.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 
