--- a/reports.html
+++ b/reports.html
@@ -27,292 +27,38 @@
 
         }
 
-        .bagel-img {
+        .zrq-table {
             width: 50%;
+            margin: 0 auto;
+            padding-top: 5rem;
         }
     </style>
 </head>
 
 <body>
-    <button class="btn btn-primary load-file goBack">
-        < Go Back</button>
+    <button class="btn btn-primary goBack">Load another CSV file</button>
+    <br>
+    <br>
 
-            <h1>Top 30 Albums BY SPINS</h1>
-            <table class="table table-dark table-striped">
-                <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Artist</th>
-                        <th scope="col">Album</th>
-                        <th scope="col">Spins</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Elbow</td>
-                        <td>Giants of All Sizes</td>
-                        <td>35</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>The Orange Kyte</td>
-                        <td>Carousel</td>
-                        <td>27</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>The Growlers</td>
-                        <td>Natural Affair</td>
-                        <td>27</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">4</th>
-                        <td>The Shivas</td>
-                        <td>Dark Thoughts</td>
-                        <td>27</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">5</th>
-                        <td>Shopping</td>
-                        <td>All or Nothing</td>
-                        <td>27</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">6</th>
-                        <td>Of Montreal</td>
-                        <td>UR FUN</td>
-                        <td>26</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">7</th>
-                        <td>Mush</td>
-                        <td>3D Routine</td>
-                        <td>25</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">8</th>
-                        <td>Les Deuxluxes</td>
-                        <td>Lighter Fluid</td>
-                        <td>25</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">9</th>
-                        <td>Frankie Valet</td>
-                        <td>Waterfowl</td>
-                        <td>24</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">10</th>
-                        <td>Hallelujah the Hills</td>
-                        <td>I'm You</td>
-                        <td>20</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">xx</th>
-                        <td>etc...</td>
-                        <td>etc...</td>
-                        <td>etc...</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">xx</th>
-                        <td>etc...</td>
-                        <td>etc...</td>
-                        <td>etc...</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">xx</th>
-                        <td>etc...</td>
-                        <td>etc...</td>
-                        <td>etc...</td>
-                    </tr>
-                </tbody>
-            </table>
+    <div id="TopAlbumsBySpins" class="zrq-table">
+    </div>
 
-            <h1>Top 30 Albums BY LISTENERS</h1>
-            <table class="table table-dark table-striped">
-                <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Artist</th>
-                        <th scope="col">Album</th>
-                        <th scope="col">Listeners</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Elbow</td>
-                        <td>Giants of All Sizes</td>
-                        <td>35</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>The Orange Kyte</td>
-                        <td>Carousel</td>
-                        <td>27</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>The Growlers</td>
-                        <td>Natural Affair</td>
-                        <td>27</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">4</th>
-                        <td>The Shivas</td>
-                        <td>Dark Thoughts</td>
-                        <td>27</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">5</th>
-                        <td>Shopping</td>
-                        <td>All or Nothing</td>
-                        <td>27</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">6</th>
-                        <td>Of Montreal</td>
-                        <td>UR FUN</td>
-                        <td>26</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">7</th>
-                        <td>Mush</td>
-                        <td>3D Routine</td>
-                        <td>25</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">8</th>
-                        <td>Les Deuxluxes</td>
-                        <td>Lighter Fluid</td>
-                        <td>25</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">9</th>
-                        <td>Frankie Valet</td>
-                        <td>Waterfowl</td>
-                        <td>24</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">10</th>
-                        <td>Hallelujah the Hills</td>
-                        <td>I'm You</td>
-                        <td>20</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">xx</th>
-                        <td>etc...</td>
-                        <td>etc...</td>
-                        <td>etc...</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">xx</th>
-                        <td>etc...</td>
-                        <td>etc...</td>
-                        <td>etc...</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">xx</th>
-                        <td>etc...</td>
-                        <td>etc...</td>
-                        <td>etc...</td>
-                    </tr>
-                </tbody>
-            </table>
+    <div id="TopArtistsBySpins" class="zrq-table">
+    </div>
 
+    <div id="TopTracksBySpins" class="zrq-table">
+    </div>
 
-            <h1>Top 30 Artists BY SPINS</h1>
-            <table class="table table-dark table-striped">
-                <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Artist</th>
-                        <th scope="col">Album</th>
-                        <th scope="col">Spins</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Elbow</td>
-                        <td>Giants of All Sizes</td>
-                        <td>35</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>The Orange Kyte</td>
-                        <td>Carousel</td>
-                        <td>27</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>The Growlers</td>
-                        <td>Natural Affair</td>
-                        <td>27</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">4</th>
-                        <td>The Shivas</td>
-                        <td>Dark Thoughts</td>
-                        <td>27</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">5</th>
-                        <td>Shopping</td>
-                        <td>All or Nothing</td>
-                        <td>27</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">6</th>
-                        <td>Of Montreal</td>
-                        <td>UR FUN</td>
-                        <td>26</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">7</th>
-                        <td>Mush</td>
-                        <td>3D Routine</td>
-                        <td>25</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">8</th>
-                        <td>Les Deuxluxes</td>
-                        <td>Lighter Fluid</td>
-                        <td>25</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">9</th>
-                        <td>Frankie Valet</td>
-                        <td>Waterfowl</td>
-                        <td>24</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">10</th>
-                        <td>Hallelujah the Hills</td>
-                        <td>I'm You</td>
-                        <td>20</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">xx</th>
-                        <td>etc...</td>
-                        <td>etc...</td>
-                        <td>etc...</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">xx</th>
-                        <td>etc...</td>
-                        <td>etc...</td>
-                        <td>etc...</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">xx</th>
-                        <td>etc...</td>
-                        <td>etc...</td>
-                        <td>etc...</td>
-                    </tr>
-                </tbody>
-            </table>
+    <div id="TopAlbumsByListeners" class="zrq-table">
+    </div>
+
+    <div id="TopArtistsByListeners" class="zrq-table">
+    </div>
+
+    <div id="TopTracksByListeners" class="zrq-table">
+    </div>
+
+    <button class="btn btn-primary goBack">Load another CSV file</button>
 
 </body>
 
