--- a/reports.html
+++ b/reports.html
@@ -36,9 +36,12 @@
 </head>
 
 <body>
-    <button class="btn btn-primary goBack">Load another CSV file</button>
-    <br>
-    <br>
+
+    <nav class="navbar fixed-top navbar-dark bg-dark">
+        <div class="container-fluid">
+            <button class="btn btn-primary goBack">Load another CSV file</button>
+        </div>
+    </nav>
 
     <div id="TopAlbumsBySpins" class="zrq-table">
     </div>
@@ -58,7 +61,6 @@
     <div id="TopTracksByListeners" class="zrq-table">
     </div>
 
-    <button class="btn btn-primary goBack">Load another CSV file</button>
 
 </body>
 
