--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </form>
 
     <form id="formReport" class="row g-3" style="display: none;">
-        <h3>Which reports do you want to see ?</h3>
+        <!-- <h3>Reports</h3> -->
         <div class="col-md-2">
             <label for="inputFrom" class="form-label">From</label>
             <input type="date" class="form-control" id="inputFrom">
@@ -40,7 +40,7 @@
         <div class="col-md-6">
 
         </div>
-        <div class="col-md-2">
+        <!-- <div class="col-md-2">
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" checked id="TopAlbumsBySpins">
                 <label class="form-check-label" for="TopAlbumsBySpins">
@@ -96,17 +96,18 @@
                 </label>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6"> -->
 
         </div>
         <div class="col-12">
-            <button class="btn btn-success showReport">Show me the reports</button>
+            <button class="btn btn-primary showReport">Show me the reports</button>
             <button class="btn btn-secondary loadAnother">Load another CSV file</button>
         </div>
     </form>
     <hr>
     <form id="searchForm" class="row g-3" style="display: none;">
-        <h4>You can filter by...</h4>
+        <h3>CSV file contents</h3>
+        <h4>You can filter them by...</h4>
         <div class="col-md-12">
             <input class="form-check-input" checked type="radio" name="flexRadioDefault" id="rbArtist">
             <label class="form-check-label" for="rbArtist">
@@ -119,6 +120,10 @@
             <input class="form-check-input zrq-margin-left" type="radio" name="flexRadioDefault" id="rbAlbum">
             <label class="form-check-label" for="rbAlbum">
                 Album
+            </label>
+            <input class="form-check-input zrq-margin-left" type="radio" name="flexRadioDefault" id="rbAll">
+            <label class="form-check-label" for="rbAll">
+                Everywhere, I really don't care
             </label>
         </div>
 
