--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>BAGeL Radio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link href="css/zrqStyle.css" rel="stylesheet">
 </head>
 
@@ -17,14 +18,14 @@
     <form id="formSelectionScreen" class="row g-3">
         <img class="bagel-img" src="img/bagel.jpg" alt="">
 
-        <h3>Upload your CSV file</h3>
+        <h2>Upload your CSV file</h2>
         <div class="col-md-12">
             <input type="file" name="files" class="form-control" id="myFile">
         </div>
     </form>
 
     <form id="formReport" class="row g-3" style="display: none;">
-        <!-- <h3>Reports</h3> -->
+        <h2>File has been uploaded!</h2>
         <div class="col-md-2">
             <label for="inputFrom" class="form-label">From</label>
             <input type="date" class="form-control" id="inputFrom">
