hide date fields

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         </div>
         <div class="col-md-9">
         </div>
-        <div class="col-md-2">
+        <!-- <div class="col-md-2">
             <label for="inputFrom" class="form-label">From</label>
             <input type="date" class="form-control" id="inputFrom">
         </div>
         <div class="col-md-2">
             <label for="inputTo" class="form-label">To</label>
             <input type="date" class="form-control" id="inputTo">
-        </div>
+        </div> -->
         <div class="col-md-2">
             <label for="inputNumberOfItems" class="form-label">Number of items to show</label>
             <input type="number" class="form-control" id="inputNumberOfItems" value="30">
