new version file format

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <form id="formReport" class="row g-3" style="display: none;">
         <h2>File has been uploaded!</h2>
         <div class="col-md-3">
-            <button type="button" id="btnWarning" onclick="showMissingInfo()" class="btn btn-warning">Hey!! Your data
-                has missing album info <i class="bi bi-exclamation-circle-fill"></i>
+            <button type="button" id="btnWarning" onclick="showMissingInfo()" class="btn btn-warning">Hey!! You have
+                some corrupt data <i class="bi bi-exclamation-circle-fill"></i>
             </button>
         </div>
         <div class="col-md-9">
@@ -62,13 +62,13 @@
             <label class="form-check-label" for="rbArtist">
                 Artist
             </label>
-            <input class="form-check-input zrq-margin-left" type="radio" name="flexRadioDefault" id="rbSong">
-            <label class="form-check-label" for="rbSong">
-                Song
-            </label>
             <input class="form-check-input zrq-margin-left" type="radio" name="flexRadioDefault" id="rbAlbum">
             <label class="form-check-label" for="rbAlbum">
                 Album
+            </label>
+            <input class="form-check-input zrq-margin-left" type="radio" name="flexRadioDefault" id="rbSong">
+            <label class="form-check-label" for="rbSong">
+                Song
             </label>
             <input class="form-check-input zrq-margin-left" type="radio" name="flexRadioDefault" id="rbAll">
             <label class="form-check-label" for="rbAll">
@@ -113,14 +113,14 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header bg-warning">
-                    <h5 class="modal-title">Missing Album Info</h5>
+                    <h5 class="modal-title">Corrupt Data Found</h5>
                     <button type="button" class="btn-close" onclick="onCloseModalClick()" data-bs-dismiss="modal"
                         aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <h3 id="warningTitle"></h3>
                     <br>
-                    <h5>ARTIST/TRACK</h5>
+                    <h5>ITEMS found on the CSV file</h5>
                     <ul id="ulMissing"></ul>
                 </div>
                 <div class="modal-footer">
