--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <form id="formSelectionScreen" class="row g-3">
         <img class="bagel-img" src="img/bagel.jpg" alt="">
 
-        <h2>Upload your CSV file</h2>
+        <h2>Upload your TAB delimited file</h2>
         <div class="col-md-12">
             <input type="file" name="files" class="form-control" id="myFile">
         </div>
@@ -50,12 +50,12 @@
         </div>
         <div class="col-12">
             <button class="btn btn-primary showReport">Show me the reports</button>
-            <button class="btn btn-secondary loadAnother">Load another CSV file</button>
+            <button class="btn btn-secondary loadAnother">Load another file</button>
         </div>
     </form>
     <hr>
     <form id="searchForm" class="row g-3" style="display: none;">
-        <h3>CSV file contents</h3>
+        <h3>Uploaded file contents</h3>
         <h4>You can filter them by...</h4>
         <div class="col-md-12">
             <input class="form-check-input" checked type="radio" name="flexRadioDefault" id="rbArtist">
