--- a/reports.html
+++ b/reports.html
@@ -39,7 +39,7 @@
 
     <nav class="navbar fixed-top navbar-dark bg-dark">
         <div class="container-fluid">
-            <button class="btn btn-primary goBack">Load another CSV file</button>
+            <button class="btn btn-primary goBack">Load another file</button>
         </div>
     </nav>
 
