--- a/index.html
+++ b/index.html
@@ -11,29 +11,39 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link href="css/zrqStyle.css" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CY53EZ0SGY"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-CY53EZ0SGY');
+    </script>
 </head>
 
 <body>
+    <div class="cover-container d-flex w-100 h-100 p-5 mx-auto flex-column">
 
-    <form id="formSelectionScreen" class="row g-3">
-        <img class="bagel-img" src="img/bagel.jpg" alt="">
+        <form id="formSelectionScreen" class="row g-3">
+            <img class="bagel-img" src="img/bagel.jpg" alt="">
 
-        <h2>Upload your TAB delimited file</h2>
-        <div class="col-md-12">
-            <input type="file" name="files" class="form-control" id="myFile">
-        </div>
-    </form>
+            <h2>Upload your TAB delimited file</h2>
+            <div class="col-md-12">
+                <input type="file" name="files" class="form-control" id="myFile">
+            </div>
+        </form>
 
-    <form id="formReport" class="row g-3" style="display: none;">
-        <h2>File has been uploaded!</h2>
-        <div class="col-md-3">
-            <button type="button" id="btnWarning" onclick="showMissingInfo()" class="btn btn-warning">Hey!! You have
-                some corrupt data <i class="bi bi-exclamation-circle-fill"></i>
-            </button>
-        </div>
-        <div class="col-md-9">
-        </div>
-        <!-- <div class="col-md-2">
+        <form id="formReport" class="row g-3" style="display: none;">
+            <h2>File has been uploaded!</h2>
+            <div class="col-md-3">
+                <button type="button" id="btnWarning" onclick="showMissingInfo()" class="btn btn-warning">Hey!! You have
+                    some corrupt data <i class="bi bi-exclamation-circle-fill"></i>
+                </button>
+            </div>
+            <div class="col-md-9">
+            </div>
+            <!-- <div class="col-md-2">
             <label for="inputFrom" class="form-label">From</label>
             <input type="date" class="form-control" id="inputFrom">
         </div>
@@ -41,95 +51,101 @@
             <label for="inputTo" class="form-label">To</label>
             <input type="date" class="form-control" id="inputTo">
         </div> -->
-        <div class="col-md-2">
-            <label for="inputNumberOfItems" class="form-label">Number of items to show</label>
-            <input type="number" class="form-control" id="inputNumberOfItems" value="30">
-        </div>
-        <div class="col-md-6">
+            <div class="col-md-2">
+                <label for="inputNumberOfItems" class="form-label">Number of items to show</label>
+                <input type="number" class="form-control" id="inputNumberOfItems" value="30">
+            </div>
+            <div class="col-md-6">
 
-        </div>
-        <div class="col-12">
-            <button class="btn btn-primary showReport">Show me the reports</button>
-            <button class="btn btn-secondary loadAnother">Load another file</button>
-        </div>
-    </form>
-    <hr>
-    <form id="searchForm" class="row g-3" style="display: none;">
-        <h3>Uploaded file contents</h3>
-        <h4>You can filter them by...</h4>
-        <div class="col-md-12">
-            <input class="form-check-input" checked type="radio" name="flexRadioDefault" id="rbArtist">
-            <label class="form-check-label" for="rbArtist">
-                Artist
-            </label>
-            <input class="form-check-input zrq-margin-left" type="radio" name="flexRadioDefault" id="rbAlbum">
-            <label class="form-check-label" for="rbAlbum">
-                Album
-            </label>
-            <input class="form-check-input zrq-margin-left" type="radio" name="flexRadioDefault" id="rbSong">
-            <label class="form-check-label" for="rbSong">
-                Song
-            </label>
-            <input class="form-check-input zrq-margin-left" type="radio" name="flexRadioDefault" id="rbAll">
-            <label class="form-check-label" for="rbAll">
-                Everywhere, I really don't care
-            </label>
-        </div>
+            </div>
+            <div class="col-12">
+                <button class="btn btn-primary showReport">Show me the reports</button>
+                <button class="btn btn-secondary loadAnother">Load another file</button>
+            </div>
+        </form>
+        <hr>
+        <form id="searchForm" class="row g-3" style="display: none;">
+            <h3>Uploaded file contents</h3>
+            <h4>You can filter them by...</h4>
+            <div class="col-md-12">
+                <input class="form-check-input" checked type="radio" name="flexRadioDefault" id="rbArtist">
+                <label class="form-check-label" for="rbArtist">
+                    Artist
+                </label>
+                <input class="form-check-input zrq-margin-left" type="radio" name="flexRadioDefault" id="rbAlbum">
+                <label class="form-check-label" for="rbAlbum">
+                    Album
+                </label>
+                <input class="form-check-input zrq-margin-left" type="radio" name="flexRadioDefault" id="rbSong">
+                <label class="form-check-label" for="rbSong">
+                    Song
+                </label>
+                <input class="form-check-input zrq-margin-left" type="radio" name="flexRadioDefault" id="rbAll">
+                <label class="form-check-label" for="rbAll">
+                    Everywhere, I really don't care
+                </label>
+            </div>
 
 
-        <div class="col-md-3">
-            <input id="zrq-search" name="zrq-search" type="text" placeholder="Type you query here..."
-                class="form-control" />
-        </div>
+            <div class="col-md-3">
+                <input id="zrq-search" name="zrq-search" type="text" placeholder="Type you query here..."
+                    class="form-control" />
+            </div>
 
-        <div class="col-md-3">
-            <button class="btn btn-secondary" id="btnClearFilter">Clear filter</button>
-        </div>
+            <div class="col-md-3">
+                <button class="btn btn-secondary" id="btnClearFilter">Clear filter</button>
+            </div>
 
-    </form>
+        </form>
 
-    <div id="myTable"></div>
+        <div id="myTable"></div>
 
-    <div id="zrqError" class="modal" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header bg-danger">
-                    <h5 class="modal-title">ERROR</h5>
-                    <button type="button" class="btn-close" onclick="onCloseModalClick()" data-bs-dismiss="modal"
-                        aria-label="Close"></button>
+        <div id="zrqError" class="modal" tabindex="-1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header bg-danger">
+                        <h5 class="modal-title">ERROR</h5>
+                        <button type="button" class="btn-close" onclick="onCloseModalClick()" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p id="errorText"></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" onclick="onCloseModalClick()"
+                            data-bs-dismiss="modal">Close</button>
+                    </div>
                 </div>
-                <div class="modal-body">
-                    <p id="errorText"></p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" onclick="onCloseModalClick()"
-                        data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+        <div id="zrqMissingAlbumInfo" class="modal " tabindex="-1">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header bg-warning">
+                        <h5 class="modal-title">Corrupt Data Found</h5>
+                        <button type="button" class="btn-close" onclick="onCloseModalClick()" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <h3 id="warningTitle"></h3>
+                        <br>
+                        <h5>ITEMS found on the CSV file</h5>
+                        <ul id="ulMissing"></ul>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" onclick="onCloseModalClick()"
+                            data-bs-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <div id="zrqMissingAlbumInfo" class="modal " tabindex="-1">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header bg-warning">
-                    <h5 class="modal-title">Corrupt Data Found</h5>
-                    <button type="button" class="btn-close" onclick="onCloseModalClick()" data-bs-dismiss="modal"
-                        aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <h3 id="warningTitle"></h3>
-                    <br>
-                    <h5>ITEMS found on the CSV file</h5>
-                    <ul id="ulMissing"></ul>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" onclick="onCloseModalClick()"
-                        data-bs-dismiss="modal">Close</button>
-                </div>
-            </div>
+    <footer class="zrq-footer footer text-center">
+        <div class="container">
+            <p>Developed by <a href="http://www.ricardoquintas.com/" target="_blank">Ricardo Quintas</a></p>
         </div>
-    </div>
+    </footer>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
