--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
             </div>
         </div>
     </div>
-    <footer class="zrq-footer footer text-center">
-        <div class="container">
+    <footer class="zrq-footer footer text-center bg-dark">
+        <div class="container text-white">
             <p>Developed by <a href="http://www.ricardoquintas.com/" target="_blank">Ricardo Quintas</a></p>
         </div>
     </footer>
