--- a/reports.html
+++ b/reports.html
@@ -22,15 +22,24 @@
             background-color: transparent;
         }
 
- 
+
         .zrq-table {
             width: 50%;
             margin: 0 auto;
             padding-top: 5rem;
         }
     </style>
-        <link href="css/zrqStyle.css" rel="stylesheet">
 
+    <link href="css/zrqStyle.css" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CY53EZ0SGY"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-CY53EZ0SGY');
+    </script>
 </head>
 
 <body>
@@ -62,8 +71,8 @@
 
 
     </div>
-    <footer class="zrq-footer footer text-center">
-        <div class="container">
+    <footer class="zrq-footer footer text-center bg-dark">
+        <div class="container text-white">
             <p>Developed by <a href="http://www.ricardoquintas.com/" target="_blank">Ricardo Quintas</a></p>
         </div>
     </footer>
